# mchj-generator

./: Cargo.toml  README.md  build.rs
libmchj-generator/: CMakeLists.txt  config.h.cmake
libmchj-generator/src/: affinity.h  generator.c
src/: bindings.rs  error.rs  lib.rs
