[package]
name = "mchj-generator"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]
description = "Rust bindings for Cagri Balkesen's join data generator"

[dependencies]
error-chain = "~0.12.0"
serde = "~1.0.80"
serde_derive = "~1.0.80"

[build-dependencies]
bindgen = "0.43.0"
cmake = "~0.1"
